--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "expresss": "^0.0.0",
     "firebase-admin": "^13.6.0"
   },
   "devDependencies": {
